<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.siclo.app.ui.signup.model.SignUpUserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/bottom_margin"
            tools:context=".ui.login.view.LoginFragment">

            <include
                android:id="@+id/toolbar"
                layout="@layout/view_toolbar" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/side_margin" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/side_margin" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <TextView
                android:id="@+id/tvBody"
                style="@style/BodyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_sign_up_user_tell_us"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/InputLayout"
                error="@{viewModel.userForm.nameError}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_first_name"
                app:layout_constraintEnd_toStartOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/tvBody">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="45"
                    android:text="@={viewModel.userForm.fields.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/InputLayout"
                error="@{viewModel.userForm.lastNameError}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_last_name"
                app:layout_constraintEnd_toStartOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="45"
                    android:text="@={viewModel.userForm.fields.lastNames}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/InputLayout"
                error="@{viewModel.userForm.birthdayError}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_birthday"
                app:layout_constraintEnd_toStartOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:maxLength="10"
                    android:text="@={viewModel.userForm.fields.birthday}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                style="@style/InputLayout"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_lada"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:maxLength="3"
                    android:text="@string/login_sign_up_user_default_lada" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                style="@style/InputLayout"
                error="@{viewModel.userForm.phoneError}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_phone"
                app:layout_constraintEnd_toStartOf="@id/endGuideline"
                app:layout_constraintStart_toEndOf="@id/textInputLayout5"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:text="@={viewModel.userForm.fields.phone}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                style="@style/InputLayout"
                error="@{viewModel.userForm.weightError}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_weight"
                app:layout_constraintEnd_toStartOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout6">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:text="@={viewModel.userForm.fields.weight}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                style="@style/InputLayout"
                error="@{viewModel.userForm.heightError}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/login_sign_up_user_height"
                app:layout_constraintEnd_toStartOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout7">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    android:text="@={viewModel.userForm.fields.height}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                style="@style/PrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:onClick="@{() -> viewModel.performRegistration()}"
                android:text="@string/ready"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/endGuideline"
                app:layout_constraintStart_toStartOf="@id/startGuideline"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>