<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.siclo.app.ui.login.model.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/bottom_margin"
        tools:context=".ui.login.view.LoginFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/side_margin" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/side_margin" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_credentials_hello_again"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/InputLayout"
            error="@{viewModel.loginForm.emailError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/login_credentials_username"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="200"
                android:text="@={viewModel.loginForm.fields.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/InputLayout"
            error="@{viewModel.loginForm.passwordError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/textView3"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="10"
                android:text="@={viewModel.loginForm.fields.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/ActionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_credentials_forgotten_password"
            app:layout_constraintBottom_toTopOf="@id/btnLoginCredentialsEnter"
            app:layout_constraintEnd_toStartOf="@id/endGuideline"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout2" />

        <Button
            android:id="@+id/btnLoginCredentialsEnter"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.performLogin()}"
            android:text="@string/login_credentials_enter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>